$Id: History,v 1.61 2002-08-13 14:12:19 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Aug 13, 2002 M.Dressel
- removed the files I have placed in run:
 include/G4MapPtkStandardCellScorer.hh 
 include/G4ParallelSamplerMessenger.hh  
 include/G4StandardCellScoreValues.hh
 include/G4StandardCellScorer.hh
 include/G4StandardScoreTable.hh
 include/G4StandardScorer.hh
 src/G4MapPtkStandardCellScorer.cc
 src/G4ParallelSamplerMessenger.cc
 src/G4StandardCellScorer.cc
 src/G4StandardScoreTable.cc
 src/G4StandardScoreTable.cc
 src/G4StandardScorer.cc

Aug 8, 2002 M.Asai (run-V04-01-00)
- G4RunManager and G4RunMessenger are modified to
 - introduce "soft abortion", i.e. event loop is aborted after processing the current event
 - introduce AbortEvent() method and corresponding UI command
- NOTE :
 internal-1-run-V04-01-01 is NOT included in this tag

July 18, 2002 M.Dressel
- change G4StandardScorerTable to the new G4IStore 

July 12, 2002 M.Dressel 
- added comments to include/G4ParallelSamplerMessenger.hh
  and src/G4ParallelSamplerMessenger.cc

July 11, 2002 M.Dressel (internal-1-run-V04-01-01)
- add:
 include/G4MapPtkStandardCellScorer.hh 
 include/G4ParallelSamplerMessenger.hh  